src/test/deca/context/invalid/test_error_3.22.deca
// Description:
//    Programme soulevant l'erreur (3.22)
// Resultats:
//    Erreur contextuelle
//    Ligne 11 : Expression booléenne attendue (règle 3.22)
//
// Historique:
//    cree le 12/01/2022

{
   if (1) {
   }
}